syntax= "proto3";

package auth;

import "google/protobuf/timestamp.proto";

//users
service UserService {
  rpc CreateUser (CreateUserDto) returns (User) {}
  rpc UserLogin (LoginDto) returns (AuthResponse) {}
  rpc UpdateUserPassword (UpdateUserPasswordDto) returns (User) {}
  rpc UpdateUserEmail (UpdateUserEmailDto) returns (User) {}
  rpc LogoutUser (LogoutDto) returns (Empty) {}
  rpc UserRefreshToken (RefreshTokenDto) returns (AuthResponse) {}
  rpc UserForgotPassword (ForgotPasswordDto) returns (Empty) {}
  rpc UserResetPassword (ResetPasswordDto) returns (Empty) {}
  rpc RemoveUser (FindOneDto) returns (Empty) {}
}

//Admins
service AdminService {
  rpc CreateAdmin (CreateAdminDto) returns (Admin) {}
  rpc AdminLogin (LoginDto) returns (AuthResponse) {}
  rpc UpdateAdminRole (UpdateAdminRoleDto) returns (Admin) {}
  rpc UpdateAdminEmail (UpdateAdminEmailDto) returns (Admin) {}
  rpc UpdateAdminPassword (UpdateAdminPasswordDto) returns (Admin) {}
  rpc LogoutAdmin (LogoutDto) returns (Empty) {}
  rpc AdminRefreshToken (RefreshTokenDto) returns (AuthResponse) {}
  rpc AdminForgotPassword (ForgotPasswordDto) returns (Empty) {}
  rpc AdminResetPassword (ResetPasswordDto) returns (Empty) {}
  rpc RemoveAdmin (FindOneDto) returns (Empty) {}
}

//Roles
service RoleService {
  rpc CreateRole (CreateRoleDto) returns (Role) {}
  rpc GetAllRoles (Empty) returns (RolesResponse) {}
  rpc GetRoleById (FindOneDto) returns (Role) {}
  rpc UpdateRole (UpdateRoleDto) returns (Role) {}
  rpc DeleteRole (FindOneDto) returns (Empty) {}
}
//common DTOs
message Empty {}

message LoginDto {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message FindOneDto {
  string id = 1;
}

message ForgotPasswordDto {
  string email = 1;
}

message  ResetPasswordDto {
  string token = 1;
  string newPassword = 2;
}

//user DTOs
message CreateUserDto {
  string email = 1;
  string password = 2;
}

message UpdateUserEmailDto {
  string id = 1;
  string email = 2;
}

message UpdateUserPasswordDto {
  string id = 1;
  string password = 2;
}

message LogoutDto {
  string refreshToken = 1;
}

message RefreshTokenDto {
  string refreshToken = 1;
}
//admin DTOs
message CreateAdminDto {
  string email = 1;
  string password = 2;
  string role = 3;
}

message UpdateAdminRoleDto {
  string id = 1;
  string role =2;
}

message UpdateAdminEmailDto {
  string id = 1;
  string email = 2;
}

message UpdateAdminPasswordDto {
  string id = 1;
  string password = 2;
}
//role Dto
message RolesResponse {
  repeated Role roles = 1;
}

message CreateRoleDto {
  string name = 1;
  repeated Permissions permissions = 2;
}

message UpdateRoleDto {
  string id = 1;
  string name = 2;
  repeated Permissions permissions = 3;
}
// user response
message User {
  string id = 1;
  string email = 2;
  bool isActive = 3;
  bool isDeleted = 4;
  bool isEmailVerified = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

// admin response
message Admin {
  string id = 1;
  string roleId = 2;
  string email = 3;
  bool isActive = 4;
  bool isDeleted = 5;
  bool isEmailVerified = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

// role response
message Role {
  string id = 1;
  string name = 2;
  repeated Permissions permissions = 3;
  google.protobuf.Timestamp createdAt = 4;
  google.protobuf.Timestamp updatedAt = 5;
}

enum Permissions {
  PERMISSION_UNSPECIFIED = 0;
  VIEW_DASHBOARD = 1;
  MANAGE_USERS = 2;
  MANAGE_ORDERS = 3;
  MANAGE_PRODUCTS = 4;
  MANAGE_ROLES = 5;
}

//refreshToken response
message RefreshToken {
  string id = 1;
  User userId = 2;
  Admin adminId = 3;
  string token = 4;
  bool revoked = 5;
  google.protobuf.Timestamp expiresAt = 6;
  google.protobuf.Timestamp createdAt = 7;
}